# Breakout-Clone

./: CMakeLists.txt  README.md  build.sh  build_and_run.sh  build_release.sh
cmake/: FindSDL2.cmake
lib/: AARectangle.h  App.cpp  App.h  BMPImage.cpp  BMPImage.h  BitmapFont.cpp  BitmapFont.h  BoundaryEdge.h  CMakeLists.txt  Circle.h  Color.h  DGame.h  Excluder.h  FileCommandLoader.cpp  GameController.h  GameScene.cpp  GameScene.h  InputAction.h  Path.cpp  Path.h  Screen.cpp  Screen.h  Shape.h  SpriteSheet.cpp  SpriteSheet.h  Triangle.h  Vec2D.cpp  Vec2D.h
lib/DGame/: CMakeLists.txt  DGame.h
lib/DGame/Core/: AARectangle.cpp  AARectangle.h  App.cpp  App.h  BMPImage.cpp  BMPImage.h  BitmapFont.cpp  BitmapFont.h  BoundaryEdge.h  Circle.cpp  Circle.h  Color.cpp  Color.h  Excluder.cpp  Excluder.h  FileCommandLoader.cpp  FileCommandLoader.h  Game.h  GameController.cpp  GameController.h  GameScene.cpp  GameScene.h  InputAction.h  InputController.cpp  InputController.h  Line2D.cpp  Line2D.h  Path.cpp  Path.h  Scene.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  Shape.cpp  Shape.h  SpriteSheet.cpp  SpriteSheet.h  Triangle.cpp  Triangle.h  (+4 more)
lib/Math/: Vector2.cpp  Vector2.h
src/: App.cpp  App.h  ArcadeApp.cpp  ArcadeScene.h  Ball.cpp  Ball.h  Block.cpp  Block.h  BreakOut.cpp  BreakOut.h  BreakoutGameLevel.cpp  BreakoutGameLevel.h  LevelBoundary.cpp  LevelBoundary.h  Paddle.cpp  Paddle.h  main.cpp
src/app/: App.cpp  App.h
src/assets/: ArcadeFont.txt  BreakoutLevels.txt
src/games/: Game.h
src/games/breakout/: Ball.cpp  Ball.h  Block.cpp  Block.h  BoundaryEdge.h  BreakOut.cpp  BreakOut.h  BreakoutGameLevel.cpp  BreakoutGameLevel.h  Excluder.cpp  Excluder.h  LevelBoundary.h  Paddle.cpp  Paddle.h
src/graphics/: BMPImage.h  BitmapFont.h  Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  SpriteSheet.cpp  SpriteSheet.h
src/input/: GameController.h  InputAction.h  InputController.h
src/scenes/: ArcadeScene.cpp  ArcadeScene.h  GameScene.cpp  GameScene.h  Scene.h
src/shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.h  Triangle.cpp  Triangle.h
src/utils/: FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.h
