project(lib)

add_library(
  ${PROJECT_NAME}
  AARectangle.h
  AARectangle.cpp
  BitmapFont.h
  BitmapFont.cpp
  BMPImage.cpp
  BMPImage.h
  Circle.h
  Circle.cpp
  Color.cpp
  Color.h
  FileCommandLoader.cpp
  FileCommandLoader.h
  GameController.cpp
  GameController.h
  GameScene.cpp
  GameScene.h
  InputAction.h
  InputController.cpp
  InputController.h
  Line2D.cpp
  Line2D.h
  Scene.h
  Screen.cpp
  Screen.h
  ScreenBuffer.cpp
  ScreenBuffer.h
  Shape.cpp
  Shape.h
  SpriteSheet.cpp
  SpriteSheet.h
  Triangle.cpp
  Triangle.h
  Utils.cpp
  Utils.h
  Vec2D.cpp
  Vec2D.h
  Game.h
  Path.h
  Path.cpp
  BoundaryEdge.h
  Excluder.cpp
  Excluder.h
  App.h
  App.cpp
)

target_link_libraries(${PROJECT_NAME} SDL2)
